helm/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: hello-world.local
      http:
        paths:
          - path: /
            backend:
              serviceName: tr-webapp
              servicePort: 8080
